// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WaveBlock /> renders correctly with bare minimum props 1`] = `
<button
  className="wave-block enabled"
  disabled={undefined}
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "rgb(240, 240, 240)",
      "flexGrow": 13,
    }
  }
>
  <div
    className="amplitude"
    style={
      Object {
        "height": "0%",
        "opacity": "0.4",
      }
    }
  />
</button>
`;

exports[`<WaveBlock /> renders correctly with bare minimum props, and filler grain 1`] = `
<button
  className="wave-block disabled"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "rgb(240, 240, 240)",
      "flexGrow": 13,
    }
  }
>
  <div
    className="amplitude"
    style={
      Object {
        "height": "0%",
        "opacity": "0.4",
      }
    }
  />
</button>
`;

exports[`<WaveBlock /> renders correctly with bare minimum props, and grain with amplitude 1`] = `
<button
  className="wave-block enabled"
  disabled={undefined}
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "rgb(240, 240, 240)",
      "flexGrow": 13,
    }
  }
>
  <div
    className="amplitude"
    style={
      Object {
        "height": "0%",
        "opacity": "0.4",
      }
    }
  />
</button>
`;

exports[`<WaveBlock /> renders correctly with bare minimum props, and maxAmplitude 1`] = `
<button
  className="wave-block enabled"
  disabled={undefined}
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "rgb(240, 240, 240)",
      "flexGrow": 13,
    }
  }
>
  <div
    className="amplitude"
    style={
      Object {
        "height": "0%",
        "opacity": "0.4",
      }
    }
  />
</button>
`;

exports[`<WaveBlock /> renders correctly with bare minimum props, and more grain 1`] = `
<button
  className="wave-block enabled"
  disabled={undefined}
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "rgb(240, 240, 240)",
      "flexGrow": 13,
    }
  }
>
  <div
    className="amplitude"
    style={
      Object {
        "height": "0%",
        "opacity": "0.4",
      }
    }
  />
</button>
`;

exports[`<WaveBlock /> renders correctly with bare minimum props, and quiet grain 1`] = `
<button
  className="wave-block enabled"
  disabled={undefined}
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "rgb(240, 230, 230)",
      "flexGrow": 13,
    }
  }
>
  <div
    className="amplitude"
    style={
      Object {
        "height": "0%",
        "opacity": "0.4",
      }
    }
  />
</button>
`;

exports[`<WaveBlock /> renders correctly with bare minimum props, and selected 1`] = `
<button
  className="wave-block enabled"
  disabled={undefined}
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "rgb(240, 240, 240)",
      "flexGrow": 13,
    }
  }
>
  <div
    className="amplitude"
    style={
      Object {
        "height": "0%",
        "opacity": "1.0",
      }
    }
  />
</button>
`;
